新增旅行管理模块功能和优化
- 新增旅行相关的数据源、仓库、用例和提供者
- 扩展数据库架构以支持旅行表
- 实现旅行的增删改查功能，包括任务和住宿管理
- 更新应用文档，添加旅行计划和财务管理功能说明
- 优化用户界面，确保旅行管理模块的交互流畅
- 添加详细的调试信息，便于后续问题排查和维护

--- a/ui/memo.html
+++ b/ui/memo.html
@@ -53,6 +53,9 @@
                 <h1 class="text-xl font-bold">备忘管理</h1>
             </div>
             <div class="flex items-center">
+                <button class="w-8 h-8 bg-white/20 rounded-full flex items-center justify-center mr-2" onclick="location.reload()">
+                    <i class="fas fa-sync-alt text-white"></i>
+                </button>
                 <button class="w-8 h-8 bg-white/20 rounded-full flex items-center justify-center mr-2">
                     <i class="fas fa-search text-white"></i>
                 </button>
@@ -128,9 +131,17 @@
                                 <i class="fas fa-calendar-alt mr-1"></i>
                                 <span>今天 14:30</span>
                             </div>
-                            <div class="text-primary-500">
-                                <i class="fas fa-tag mr-1"></i>
-                                <span>工作</span>
+                            <div class="flex items-center space-x-2">
+                                <div class="text-primary-500">
+                                    <i class="fas fa-tag mr-1"></i>
+                                    <span>工作</span>
+                                </div>
+                                <button class="w-6 h-6 bg-gray-200 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-300">
+                                    <i class="fas fa-edit text-xs"></i>
+                                </button>
+                                <button class="w-6 h-6 bg-gray-200 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-300">
+                                    <i class="fas fa-trash text-xs"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -151,9 +162,17 @@
                                 <i class="fas fa-calendar-alt mr-1"></i>
                                 <span>7月25日</span>
                             </div>
-                            <div class="text-primary-500">
-                                <i class="fas fa-tag mr-1"></i>
-                                <span>生活</span>
+                            <div class="flex items-center space-x-2">
+                                <div class="text-primary-500">
+                                    <i class="fas fa-tag mr-1"></i>
+                                    <span>生活</span>
+                                </div>
+                                <button class="w-6 h-6 bg-gray-200 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-300">
+                                    <i class="fas fa-edit text-xs"></i>
+                                </button>
+                                <button class="w-6 h-6 bg-gray-200 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-300">
+                                    <i class="fas fa-trash text-xs"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -181,9 +200,17 @@
                                 <i class="fas fa-calendar-alt mr-1"></i>
                                 <span>7月28日</span>
                             </div>
-                            <div class="text-primary-500">
-                                <i class="fas fa-tag mr-1"></i>
-                                <span>生活</span>
+                            <div class="flex items-center space-x-2">
+                                <div class="text-primary-500">
+                                    <i class="fas fa-tag mr-1"></i>
+                                    <span>生活</span>
+                                </div>
+                                <button class="w-6 h-6 bg-gray-200 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-300">
+                                    <i class="fas fa-edit text-xs"></i>
+                                </button>
+                                <button class="w-6 h-6 bg-gray-200 rounded-full flex items-center justify-center text-gray-500 hover:bg-gray-300">
+                                    <i class="fas fa-trash text-xs"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -287,4 +314,4 @@
         </div>
     </div>
 </body>
-</html> 
+</html>
