更新依赖项和新增功能模块
- 更新`pubspec.yaml`中的依赖项版本，包括`uuid`、`permission_handler`等，以确保使用最新的功能和修复。
- 在`pubspec.lock`中添加了新的依赖项，如`charcode`、`csslib`和`share_plus_platform_interface`，以支持新功能。
- 在AndroidManifest.xml中添加了Android 13+所需的媒体权限，确保应用在新版本Android上正常运行。
- 新增`SharePlusNamespace.kt`文件，确保包名目录结构存在。
- 在日常点滴和设置模块中新增数据备份和导入导出功能，提升用户体验。
- 优化了图片存储逻辑，确保图片路径的正确保存和使用。
- 新增多个UI页面，包括数据备份、数据导入导出、日常点滴详情等，丰富应用功能。
- 更新README.md文件，添加新功能说明和使用方法。

--- a/ui/index.html
+++ b/ui/index.html
@@ -112,9 +112,9 @@
             </div>
         </div>
         
-        <!-- 笔记和日常点滴 -->
+        <!-- 日常点滴 -->
         <div class="page-section">
-            <h2 class="section-title">笔记和日常点滴</h2>
+            <h2 class="section-title">日常点滴</h2>
             <div class="flex flex-wrap justify-center gap-8">
                 <!-- 日常点滴界面 -->
                 <div class="page-frame">
@@ -131,10 +131,16 @@
                         <iframe src="add_note.html" class="page-iframe" title="添加点滴"></iframe>
                     </div>
                 </div>
-                
+            </div>
+        </div>
+
+        <!-- 笔记管理 -->
+        <div class="page-section">
+            <h2 class="section-title">笔记管理</h2>
+            <div class="flex flex-wrap justify-center gap-8">
                 <!-- 笔记管理界面 -->
                 <div class="page-frame">
-                    <h2 class="page-title">笔记管理</h2>
+                    <h2 class="page-title">笔记列表</h2>
                     <div class="phone-frame bg-gray-50">
                         <iframe src="note.html" class="page-iframe" title="笔记管理"></iframe>
                     </div>
@@ -181,6 +187,39 @@
                     <h2 class="page-title">图片管理</h2>
                     <div class="phone-frame bg-gray-50">
                         <iframe src="photo_gallery.html" class="page-iframe" title="图片管理"></iframe>
+                    </div>
+                </div>
+
+                <!-- 相册详情界面 -->
+                <div class="page-frame">
+                    <h2 class="page-title">相册详情</h2>
+                    <div class="phone-frame bg-gray-50">
+                        <iframe src="album_detail.html" class="page-iframe" title="相册详情"></iframe>
+                    </div>
+                </div>
+
+                <!-- 照片详情界面 -->
+                <div class="page-frame">
+                    <h2 class="page-title">照片详情</h2>
+                    <div class="phone-frame bg-gray-50">
+                        <iframe src="photo_detail.html" class="page-iframe" title="照片详情"></iframe>
+                    </div>
+                </div>
+
+
+                <!-- 标签管理界面 -->
+                <div class="page-frame">
+                    <h2 class="page-title">标签管理</h2>
+                    <div class="phone-frame bg-gray-50">
+                        <iframe src="photo_tags.html" class="page-iframe" title="标签管理"></iframe>
+                    </div>
+                </div>
+
+                <!-- 标签详情界面 -->
+                <div class="page-frame">
+                    <h2 class="page-title">标签详情</h2>
+                    <div class="phone-frame bg-gray-50">
+                        <iframe src="tag_detail.html" class="page-iframe" title="标签详情"></iframe>
                     </div>
                 </div>
             </div>
