--- a/ui/photo_gallery.html
+++ b/ui/photo_gallery.html
@@ -115,6 +115,36 @@
                 </div>
             </div>
             
+            <!-- 快速访问 -->
+            <div class="mb-6">
+                <div class="grid grid-cols-4 gap-3">
+                    <a href="photo_categories.html" class="flex flex-col items-center">
+                        <div class="w-14 h-14 bg-primary-50 rounded-full flex items-center justify-center mb-1">
+                            <i class="fas fa-th text-primary-400 text-xl"></i>
+                        </div>
+                        <div class="text-xs text-gray-600">分类</div>
+                    </a>
+                    <a href="photo_tags.html" class="flex flex-col items-center">
+                        <div class="w-14 h-14 bg-primary-50 rounded-full flex items-center justify-center mb-1">
+                            <i class="fas fa-tags text-primary-400 text-xl"></i>
+                        </div>
+                        <div class="text-xs text-gray-600">标签</div>
+                    </a>
+                    <a href="#" class="flex flex-col items-center">
+                        <div class="w-14 h-14 bg-primary-50 rounded-full flex items-center justify-center mb-1">
+                            <i class="fas fa-heart text-primary-400 text-xl"></i>
+                        </div>
+                        <div class="text-xs text-gray-600">收藏</div>
+                    </a>
+                    <a href="#" class="flex flex-col items-center">
+                        <div class="w-14 h-14 bg-primary-50 rounded-full flex items-center justify-center mb-1">
+                            <i class="fas fa-share-alt text-primary-400 text-xl"></i>
+                        </div>
+                        <div class="text-xs text-gray-600">分享</div>
+                    </a>
+                </div>
+            </div>
+            
             <!-- 相册列表 -->
             <div class="mb-6">
                 <div class="flex justify-between items-center mb-4">
@@ -197,4 +227,4 @@
         </div>
     </div>
 </body>
-</html> 
+</html>
